--- a/schedule-manager/.editorconfig
+++ b/schedule-manager/.editorconfig
@@ -14,3 +14,10 @@ quote_type = single
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.{yml,yaml}]
+indent_style = space
+indent_size = 2
+
+[*.{template,conf}]
+indent_style = space
