--- a/schedule-manager/proxy.config.json
+++ b/schedule-manager/proxy.config.json
@@ -1,7 +1,12 @@
 {
-  "/api": {
-    "target": "http://localhost:8083",
-    "secure": false,
-    "changeOrigin": true
-  }
+	"/api": {
+		"target": "http://localhost:5000",
+		"secure": false,
+		"changeOrigin": true
+	},
+	"/hangfire": {
+		"target": "http://localhost:5000",
+		"secure": false,
+		"changeOrigin": true
+	}
 }
