--- a/LamborDatabaseJobs/LamborDatabaseJobs.csproj
+++ b/LamborDatabaseJobs/LamborDatabaseJobs.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="Hangfire.Console" Version="1.4.2" />
     <PackageReference Include="Hangfire.Core" Version="1.7.12" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.8" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
