--- a/LamborScheduler/LamborScheduler.csproj
+++ b/LamborScheduler/LamborScheduler.csproj
@@ -1,17 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<UserSecretsId>191dfcd8-89d5-4d2e-a124-f67feebd6c78</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerfileBuildArguments>--build-arg "BuildConfiguration=$(Configuration)"</DockerfileBuildArguments>
+		<DockerfileTag Condition="$(DockerfileTag) == ''">lambor/scheduler</DockerfileTag>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Hangfire.AspNetCore" Version="1.7.12" />
-    <PackageReference Include="Hangfire.Console" Version="1.4.2" />
-    <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Hangfire.AspNetCore" Version="1.7.13" />
+		<PackageReference Include="Hangfire.Console" Version="1.4.2" />
+		<PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+		<PackageReference Include="HangFire.Redis.StackExchange" Version="1.8.4" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\LamborDatabaseJobs\LamborDatabaseJobs.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\LamborDatabaseJobs\LamborDatabaseJobs.csproj" />
+	</ItemGroup>
 
 </Project>
