--- a/LamborScheduler/appsettings.json
+++ b/LamborScheduler/appsettings.json
@@ -2,6 +2,9 @@
 	"LamborConnection": {
 		"ConnectionStringTemplate": "Data Source=db.twvk.local\\MSSQLSERVERDEV;Initial Catalog={0};User ID=DBUser;Password=options1688"
 	},
+	"Hangfire": {
+		
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Information",
