--- a/schedule-manager/docker-compose.yml
+++ b/schedule-manager/docker-compose.yml
@@ -1,10 +1,14 @@
 version: "3.7"
 services:
+  pause:
+    image: k8s.gcr.io/pause:3.1
   web:
     image: test
+    pid: service:pause
     environment:
-      - API_PORT=5000
-      - API_HOST=192.168.0.106
-      - FORWARDED_PORT=1234
+      - API_HOST=api
     ports:
       - 1234:80
+  api:
+    image: 546390823857.dkr.ecr.ap-northeast-1.amazonaws.com/lambor/scheduler:20200915181111
+    pid: service:pause
