--- a/schedule-manager/nginx/default.conf.template
+++ b/schedule-manager/nginx/default.conf.template
@@ -5,19 +5,13 @@ server {
     index index.html;
 
     location /api/ {
-        proxy_set_header  X-Real-IP $remote_addr;
-        proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header  X-Forwarded-Proto $scheme;
-        proxy_set_header  X-Forwarded-Host  $host:${FORWARDED_PORT};
+        proxy_set_header Host $http_host;
 
         proxy_pass ${API_PROTO}://${API_HOST}:${API_PORT};
     }
 
     location /hangfire/ {
-        proxy_set_header  X-Real-IP $remote_addr;
-        proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header  X-Forwarded-Proto $scheme;
-        proxy_set_header  X-Forwarded-Host  $host:${FORWARDED_PORT};
+        proxy_set_header Host $http_host;
 
         proxy_pass ${API_PROTO}://${API_HOST}:${API_PORT};
     }
